--- a/src/components/layout/layout-principal/layout-principal.html
+++ b/src/components/layout/layout-principal/layout-principal.html
@@ -1,6 +1,10 @@
 <div class="layout-principal">
     <NavegacionApp />
     <main class="contenido">
-      <slot></slot>
+      <RouterView v-slot="{ Component }">
+        <Transition name="fade" mode="out-in">
+          <component :is="Component" />
+        </Transition>
+      </RouterView>
     </main>
-  </div>
+</div>
