--- a/src/components/pokemon/tarjeta-pokemon/tarjeta-pokemon.html
+++ b/src/components/pokemon/tarjeta-pokemon/tarjeta-pokemon.html
@@ -1,27 +1,27 @@
 <div 
-  class="tarjeta-pokemon"
-  :class="{
-    'seleccionable': puedeSerSeleccionado,
-    'en-equipo': estaEnEquipo
-  }"
-  @click="manejarClick"
+class="tarjeta-pokemon"
+:class="{
+  'seleccionable': puedeSerSeleccionado,
+  'en-equipo': estaEnEquipo
+}"
+@click="manejarClick"
 >
-  <img 
-    :src="pokemon.imagenes.otros['official-artwork'].frontal_defecto" 
-    :alt="pokemon.nombre"
-    class="imagen-pokemon"
-  />
-  <div class="info-pokemon">
-    <h3 class="nombre-pokemon">{{ pokemon.nombre }}</h3>
-    <div class="tipos-pokemon">
-      <span 
-        v-for="tipo in pokemon.tipos" 
-        :key="tipo.posicion"
-        class="tipo-badge"
-        :class="tipo.tipo.nombre"
-      >
-        {{ tipo.tipo.nombre }}
-      </span>
-    </div>
+<img 
+  :src="pokemon.sprites.other['official-artwork'].front_default" 
+  :alt="pokemon.nombre"
+  class="imagen-pokemon"
+/>
+<div class="info-pokemon">
+  <h3 class="nombre-pokemon">{{ pokemon.nombre }}</h3>
+  <div class="tipos-pokemon">
+    <span 
+      v-for="tipo in pokemon.types" 
+      :key="tipo.slot"
+      class="tipo-badge"
+      :class="tipo.type.name"
+    >
+      {{ tipo.type.name }}
+    </span>
   </div>
+</div>
 </div>
