--- a/src/components/pokemon/cadena-evolutiva/cadena-evolutiva.html
+++ b/src/components/pokemon/cadena-evolutiva/cadena-evolutiva.html
@@ -1,36 +1,35 @@
-<div class="cadena-evolutiva">
-    <div v-if="error" class="error-mensaje">
-      {{ error }}
+<div v-if="error" class="error-mensaje">
+  {{ error }}
+</div>
+
+<div v-else-if="cargando" class="cargando">
+  Cargando evoluciones...
+</div>
+
+<div v-else class="evoluciones-contenedor">
+  <div 
+    v-for="(etapa, index) in evoluciones" 
+    :key="index"
+    class="etapa-evolucion"
+  >
+    <div 
+      v-for="(pokemon, pokemonIndex) in etapa" 
+      :key="pokemon.nombre || pokemonIndex"
+      class="pokemon-evolucion"
+    >
+      <img 
+        v-if="pokemon.imagen"
+        :src="pokemon.imagen" 
+        :alt="pokemon.nombre || 'Unknown Pokémon'"
+        class="imagen-evolucion"
+      />
+      <span class="nombre-evolucion">{{ pokemon.nombre || 'Desconocido' }}</span>
     </div>
-  
-    <div v-else-if="cargando" class="cargando">
-      Cargando evoluciones...
-    </div>
-  
-    <div v-else class="evoluciones-contenedor">
-      <div 
-        v-for="(etapa, index) in evoluciones" 
-        :key="index"
-        class="etapa-evolucion"
-      >
-        <div 
-          v-for="(pokemon, pokemonIndex) in etapa" 
-          :key="pokemon.nombre"
-          class="pokemon-evolucion"
-        >
-          <img 
-            :src="pokemon.imagen" 
-            :alt="pokemon.nombre"
-            class="imagen-evolucion"
-          />
-          <span class="nombre-evolucion">{{ pokemon.nombre }}</span>
-        </div>
-        <div 
-          v-if="index < evoluciones.length - 1" 
-          class="flecha-evolucion"
-        >
-          →
-        </div>
-      </div>
+    <div 
+      v-if="index < evoluciones.length - 1" 
+      class="flecha-evolucion"
+    >
+      →
     </div>
   </div>
+</div>
