--- a/src/views/team/vista-pokemon/vista-pokemon.html
+++ b/src/views/team/vista-pokemon/vista-pokemon.html
@@ -18,7 +18,7 @@
         <div class="informacion-pokemon">
           <div class="seccion-principal">
             <h1 class="nombre">
-              {{ pokemon.nombre }}
+              {{ pokemon.name }}
               <span class="numero">#{{ pokemon.id.toString().padStart(3, '0') }}</span>
             </h1>
   
