--- a/src/views/team/vista-pokemon/vista-pokemon.html
+++ b/src/views/team/vista-pokemon/vista-pokemon.html
@@ -1,82 +1,17 @@
 <div class="vista-pokemon">
-    <div class="encabezado">
-      <button @click="navegarAEquipo" class="boton-regresar">
-        ← Volver al equipo
-      </button>
-    </div>
-  
-    <div class="contenido-principal">
-      <div v-if="error" class="error-mensaje">
-        {{ error }}
-      </div>
-  
-      <div v-else-if="cargando" class="cargando">
-        <div class="spinner">Cargando...</div>
-      </div>
-  
-      <template v-else-if="pokemon">
-        <div class="informacion-pokemon">
-          <div class="seccion-principal">
-            <h1 class="nombre">
-              {{ pokemon.name }}
-              <span class="numero">#{{ pokemon.id.toString().padStart(3, '0') }}</span>
-            </h1>
-  
-            <div class="contenedor-imagen">
-              <img 
-                v-if="pokemon && pokemon.imagenes && pokemon.imagenes.other['official-artwork']"
-                :src="pokemon.imagenes.other['official-artwork'].frontal_defecto"
-                :alt="pokemon.nombre"
-                class="imagen-pokemon"
-              />
-              <p v-else>Cargando imagen...</p>
-            </div>
-  
-            <div class="tipos">
-              <span 
-                v-for="type in pokemon.types" 
-                :key="type.type.name"
-                class="tipo-badge"
-                :class="type.type.name"
-              >
-                {{ type.type.name }}
-              </span>
-            </div>
-  
-            <ReproductorSonido
-              :url-sonido="pokemon.cries.latest"
-              :nombre-pokemon="pokemon.name"
-            />
-          </div>
-  
-          <div class="detalles">
-            <div class="medidas">
-              <div class="medida">
-                <span class="etiqueta">Altura</span>
-                <span class="valor">{{ pokemon.altura / 10 }}m</span>
-              </div>
-              <div class="medida">
-                <span class="etiqueta">Peso</span>
-                <span class="valor">{{ pokemon.peso / 10 }}kg</span>
-              </div>
-            </div>
-  
-            <div class="descripcion">
-              <p v-if="obtenerDescripcionEspanol()">{{ obtenerDescripcionEspanol() }}</p>
-              <p v-else>Descripción no disponible.</p>
-            </div>
-          </div>
-  
-          <div class="estadisticas">
-            <h2 class="subtitulo">Estadísticas base</h2>
-            <EstadisticasPokemon  v-if="pokemon && pokemon.stats" :estadisticas="pokemon.stats"  />
-          </div>
-  
-          <div class="evoluciones" v-if="cadenaEvolutiva">
-            <h2 class="subtitulo">Cadena evolutiva</h2>
-            <CadenaEvolutiva :cadena="cadenaEvolutiva.cadena" />
-          </div>
-        </div>
-      </template>
-    </div>
+  <div class="encabezado">
+    <button @click="navegarAEquipo" class="boton-regresar">← Volver al equipo</button>
   </div>
+
+  <div class="contenido-principal">
+    <div v-if="error" class="error-mensaje">{{ error }}</div>
+    <div v-else-if="cargando" class="cargando">Cargando...</div>
+    <template v-else>
+      <DetallePokemon 
+        :pokemon="pokemon" 
+        :especie="especie" 
+        :obtener-descripcion="obtenerDescripcionEspanol" 
+      />
+    </template>
+  </div>
+</div>
