--- a/src/views/home/vista-inicio.scss
+++ b/src/views/home/vista-inicio.scss
@@ -21,7 +21,7 @@
     }
   
     .contenido-principal {
-      @apply container mx-auto px-4;
+      @apply container mx-auto box-border;
     }
   }
   
