--- a/src/components/pokemon/tarjeta-pokemon/tarjeta-pokemon.scss
+++ b/src/components/pokemon/tarjeta-pokemon/tarjeta-pokemon.scss
@@ -6,7 +6,7 @@
   }
 
   &.en-equipo {
-    @apply border-2 border-blue-500;
+    @apply outline outline-2 outline-blue-500;
   }
 
   .imagen-pokemon {
