cambios de estilo

--- a/src/components/common/navegacion/navegacion-app.html
+++ b/src/components/common/navegacion/navegacion-app.html
@@ -2,11 +2,13 @@
     <div class="contenedor-nav">
       <router-link to="/" class="logo">
         <img 
-          src="@/assets/pokeball.svg" 
+          src="@/assets/pokeimglogo.png" 
           alt="Pokéball"
           class="icono-pokeball"
         />
-        <span class="texto-logo">PokéEquipo</span>
+        <img src="@/assets/logo-PokeEquipo.png" 
+        alt="logo poke equipo"
+        class="logo-img">
       </router-link>
   
       <div class="menu">
