--- a/src/views/team/equipo/vista-equipo.html
+++ b/src/views/team/equipo/vista-equipo.html
@@ -1,7 +1,7 @@
 <div class="vista-equipo">
     <div class="encabezado">
       <button @click="navegarAInicio" class="boton-regresar">
-        ← Volver
+         Volver
       </button>
       <h1 class="titulo">Mi Equipo Pokémon</h1>
     </div>
