--- a/src/views/home/vista-inicio.scss
+++ b/src/views/home/vista-inicio.scss
@@ -10,7 +10,7 @@
   
       .info-equipo {
         .enlace-equipo {
-          @apply text-blue-600 hover:text-blue-800 transition-colors duration-200;
+          @apply text-blue-600 hover:text-blue-800 transition-colors duration-200 no-underline font-semibold;
         }
       }
     }
