--- a/src/views/team/equipo/vista-equipo.scss
+++ b/src/views/team/equipo/vista-equipo.scss
@@ -5,7 +5,8 @@
       @apply bg-white shadow-md py-4 px-6 mb-6 flex items-center gap-4;
   
       .boton-regresar {
-        @apply text-gray-600 hover:text-gray-800 transition-colors duration-200;
+        @apply inline-block px-6 py-2 bg-green-700 text-white rounded-lg border-0 cursor-pointer
+               hover:bg-green-600 transition-colors duration-200;
       }
   
       .titulo {
@@ -33,7 +34,7 @@
         }
   
         .boton-accion {
-          @apply px-6 py-2 bg-blue-500 text-white rounded-lg
+          @apply px-6 py-2 bg-blue-500 text-white rounded-lg border-0 cursor-pointer
                  hover:bg-blue-600 transition-colors duration-200;
         }
       }
