--- a/src/views/team/vista-pokemon/vista-pokemon.scss
+++ b/src/views/team/vista-pokemon/vista-pokemon.scss
@@ -5,7 +5,8 @@
       @apply bg-white shadow-md py-4 px-6 mb-6;
   
       .boton-regresar {
-        @apply text-gray-600 hover:text-gray-800 transition-colors duration-200;
+        @apply inline-block px-6 py-2 bg-blue-500 text-white rounded-lg
+               hover:bg-blue-600 transition-colors duration-200;
       }
     }
   
