--- a/src/components/layout/layout-principal/layout-principal.scss
+++ b/src/components/layout/layout-principal/layout-principal.scss
@@ -2,7 +2,7 @@
     @apply min-h-screen bg-gray-50;
   
     .contenido {
-      @apply container mx-auto px-4 py-6;
+      @apply container mx-auto px-4 py-6 box-border;
     }
   }
   
