--- a/src/components/pokemon/equipo-pokemon/equipo-pokemon.scss
+++ b/src/components/pokemon/equipo-pokemon/equipo-pokemon.scss
@@ -62,7 +62,7 @@
           @apply p-4 cursor-pointer hover:bg-gray-50 transition-colors duration-200;
   
           .imagen-pokemon {
-            @apply w-32 h-32 mx-auto;
+            @apply w-32 h-32 mx-auto block;
           }
   
           .info-pokemon {
@@ -79,7 +79,7 @@
         }
   
         .boton-eliminar {
-          @apply w-full py-2 px-4 bg-red-500 text-white
+          @apply w-full py-2 px-4 bg-red-500 text-white cursor-pointer
                  hover:bg-red-600 transition-colors duration-200;
         }
       }
