--- a/src/views/team/vista-pokemon/vista-pokemon.html
+++ b/src/views/team/vista-pokemon/vista-pokemon.html
@@ -1,6 +1,6 @@
 <div class="vista-pokemon">
   <div class="encabezado">
-    <button @click="navegarAEquipo" class="boton-regresar">← Volver al equipo</button>
+    <button @click="navegarAEquipo" class="boton-regresar">Volver al equipo</button>
   </div>
 
   <div class="contenido-principal">
