fix: cursor-pointer

--- a/src/views/team/vista-pokemon/vista-pokemon.scss
+++ b/src/views/team/vista-pokemon/vista-pokemon.scss
@@ -5,7 +5,7 @@
       @apply bg-white shadow-md py-4 px-6 mb-6;
   
       .boton-regresar {
-        @apply inline-block px-6 py-2 bg-blue-500 text-white rounded-lg
+        @apply inline-block px-6 py-2 bg-blue-500 text-white rounded-lg cursor-pointer
                hover:bg-blue-600 transition-colors duration-200;
       }
     }
