--- a/src/components/pokemon/equipo-pokemon/equipo-pokemon.scss
+++ b/src/components/pokemon/equipo-pokemon/equipo-pokemon.scss
@@ -13,7 +13,7 @@
       }
   
       .boton-regresar {
-        @apply inline-block px-6 py-2 bg-blue-500 text-white rounded-lg
+        @apply inline-block px-6 py-2 bg-blue-500 text-white rounded-lg cursor-pointer
                hover:bg-blue-600 transition-colors duration-200;
       }
     }
