--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,12 @@
+@font-face {
+  font-family: 'PokemonClassic';
+  src: url('@/assets/fonts/pokemon-classic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
+  font-family: 'PokemonClassic', sans-serif;
   margin: 0;
 }
 
