--- a/src/views/home/vista-inicio.scss
+++ b/src/views/home/vista-inicio.scss
@@ -9,6 +9,7 @@
       }
   
       .info-equipo {
+        @apply text-right;
         .enlace-equipo {
           @apply text-blue-600 hover:text-blue-800 transition-colors duration-200 no-underline font-semibold;
         }
