--- a/src/views/team/equipo/vista-equipo.scss
+++ b/src/views/team/equipo/vista-equipo.scss
@@ -7,6 +7,7 @@
       .boton-regresar {
         @apply inline-block px-6 py-2 bg-green-700 text-white rounded-lg border-0 cursor-pointer
                hover:bg-green-600 transition-colors duration-200;
+        font-family: 'PokemonClassic', sans-serif;
       }
   
       .titulo {
@@ -36,6 +37,7 @@
         .boton-accion {
           @apply px-6 py-2 bg-blue-500 text-white rounded-lg border-0 cursor-pointer
                  hover:bg-blue-600 transition-colors duration-200;
+          font-family: 'PokemonClassic', sans-serif;
         }
       }
   
@@ -49,6 +51,7 @@
         .boton-agregar {
           @apply px-4 py-2 bg-green-600 text-white rounded-lg border-0 cursor-pointer
                  hover:bg-green-700 transition-colors duration-200;
+          font-family: 'PokemonClassic', sans-serif;
         }
       }
     }
