--- a/src/views/team/vista-pokemon/vista-pokemon.scss
+++ b/src/views/team/vista-pokemon/vista-pokemon.scss
@@ -7,6 +7,7 @@
       .boton-regresar {
         @apply inline-block px-6 py-2 bg-blue-500 text-white rounded-lg cursor-pointer
                hover:bg-blue-600 transition-colors duration-200;
+        font-family: 'PokemonClassic', sans-serif;
       }
     }
   
