--- a/src/components/pokemon/detalle-pokemon/detalle-pokemon.scss
+++ b/src/components/pokemon/detalle-pokemon/detalle-pokemon.scss
@@ -10,7 +10,7 @@
     }
   
     .encabezado {
-      @apply flex justify-between items-center mb-8;
+      @apply flex justify-between items-center mb-8 flex-wrap;
   
       .titulo {
         @apply text-3xl font-bold capitalize flex items-center gap-2;
@@ -65,7 +65,7 @@
       @apply mt-12;
   
       .subtitulo {
-        @apply text-2xl font-bold mb-4;
+        @apply text-2xl font-bold mb-4 text-center;
       }
     }
   }
