--- a/src/components/common/navegacion/navegacion-app.scss
+++ b/src/components/common/navegacion/navegacion-app.scss
@@ -1,8 +1,9 @@
 .navegacion {
-    @apply bg-white shadow-md sticky top-0 z-50;
+    @apply shadow-md sticky top-0 z-50;
+    background-color: #0359ac;
   
     .contenedor-nav {
-      @apply container mx-auto px-4 py-3 flex justify-between items-center box-border;
+      @apply container mx-auto px-4 py-3 flex justify-between items-center box-border flex-col sm:flex-row;
   
       .logo {
         @apply flex items-center gap-2 text-gray-800 hover:text-gray-600 
@@ -25,11 +26,12 @@
         @apply flex gap-6;
   
         .enlace-menu {
-          @apply px-3 py-2 rounded-lg text-gray-600 hover:text-gray-800 
+          @apply px-3 py-2 rounded-lg text-white hover:text-gray-200 
                  transition-colors duration-200 no-underline;
   
           &.activo {
-            @apply bg-blue-500 text-white hover:text-white hover:bg-blue-600 font-semibold;
+            @apply text-white hover:text-white hover:bg-red-800 font-semibold;
+            background-color: #FF0000;
           }
         }
       }
