--- a/src/components/pokemon/detalle-pokemon/detalle-pokemon.scss
+++ b/src/components/pokemon/detalle-pokemon/detalle-pokemon.scss
@@ -10,10 +10,10 @@
     }
   
     .encabezado {
-      @apply flex justify-between items-center mb-8 flex-wrap;
+      @apply flex justify-between items-center mb-8 flex-wrap flex-col sm:flex-row;
   
       .titulo {
-        @apply text-3xl font-bold capitalize flex items-center gap-2;
+        @apply text-3xl font-bold capitalize flex items-center gap-2 flex-col sm:flex-row;
   
         .numero {
           @apply text-gray-500 text-xl;
