--- a/src/components/pokemon/equipo-pokemon/equipo-pokemon.scss
+++ b/src/components/pokemon/equipo-pokemon/equipo-pokemon.scss
@@ -60,10 +60,11 @@
         @apply bg-white rounded-lg shadow-md overflow-hidden;
   
         .contenido-pokemon {
-          @apply p-4 cursor-pointer hover:bg-gray-50 transition-colors duration-200;
+          @apply p-4 cursor-pointer hover:bg-gray-50 transition-colors duration-200 bg-blue-500;
   
           .imagen-pokemon {
-            @apply w-32 h-32 mx-auto block;
+            @apply w-32 h-32 mx-auto block bg-white;
+            border-radius: 50%;
           }
   
           .info-pokemon {
